Starting text analyzing

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     </div>
     <button id="select-all-button">Select All</button>
     <script src="script.js"></script>
+    <script src="parse_text.js"></script>
 </body>
 </html>
